--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-project",
+  "homepage": "https://wtwr.clienturl.net",
   "private": true,
   "version": "0.0.0",
   "type": "module",
